fix compression bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=1366 height=768 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/WebBuild_v0.1.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebBuild_v0.1.data.br",
-        frameworkUrl: buildUrl + "/WebBuild_v0.1.framework.js.br",
-        codeUrl: buildUrl + "/WebBuild_v0.1.wasm.br",
+        dataUrl: buildUrl + "/WebBuild_v0.1.data",
+        frameworkUrl: buildUrl + "/WebBuild_v0.1.framework.js",
+        codeUrl: buildUrl + "/WebBuild_v0.1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "NTN_demo",
@@ -98,8 +98,8 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1366px";
+        canvas.style.height = "768px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
